Introduced Http helper Class for decouple http request related settings from product service Implemented View model instead of model

--- a/WebApp/ProductsWebApp/Views/Product/Index.cshtml
+++ b/WebApp/ProductsWebApp/Views/Product/Index.cshtml
@@ -1,4 +1,4 @@
-﻿@model IEnumerable<ProductWebApp.Models.ProductItem>
+﻿@model IEnumerable<ProductWebApp.Models.ProductItemViewModel>
 
 @{
     ViewBag.Title = "Product List";
