UI Changes for Look and feel

--- a/WebApp/ProductsWebApp/Views/Product/Index.cshtml
+++ b/WebApp/ProductsWebApp/Views/Product/Index.cshtml
@@ -4,19 +4,19 @@
     ViewBag.Title = "Product List";
 }
 
-<h3>Add a Product</h3>
+<h3>Add a new product to inventory</h3>
 
 @if (ViewBag.ErrorMessage == null)
 {
 <form name="input" action="Product" method="post">
-    Add New Product: <input type="text" name="item">
-    <input type="submit" value="Click to Add New Product">
+    Product Name: <input type="text" name="item">
+    <input type="submit" value="Save">
 </form>
 }
 
 <table class="table table-bordered table-striped">
     <tr>
-        <th>Available Products</th>
+        <th>Available Products in ware house</th>
     </tr>
     @foreach (var i in Model)
     {
