--- a/WebApp/ProductsWebApp/Views/Shared/_Layout.cshtml
+++ b/WebApp/ProductsWebApp/Views/Shared/_Layout.cshtml
@@ -26,7 +26,7 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <a asp-area="" asp-controller="Product" asp-action="Index" class="navbar-brand">Manage Products</a>
+                <a asp-area="" asp-controller="Product" asp-action="Index" class="navbar-brand">Product Management System</a>
             </div>
             <div class="navbar-collapse collapse">               
                 @await Html.PartialAsync("_LoginPartial")
